<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/img_menu_home"
        android:title="@string/strImgHome"/>
    <item
        android:id="@+id/action_rank"
        android:enabled="true"
        android:icon="@drawable/img_menu_rank"
        android:title="@string/strImgRank"/>
    <item
        android:id="@+id/action_dolfin"
        android:enabled="true"
        android:icon="@drawable/img_menu_dolfin"
        android:title="@string/strImgDolfin"/>
    <item
        android:id="@+id/action_setting"
        android:enabled="true"
        android:icon="@drawable/img_menu_setting"
        android:title="@string/strImgSetting"/>
</menu>