<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/frag_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="0dp"
        android:paddingVertical="10dp"
        android:adjustViewBounds="true">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/btn_home_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:padding="0sp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_home_exercise"
                android:alpha="0.3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:text="@string/btn_home_exercise"
                android:fontFamily="@font/cafe24surround"
                android:textSize="50dp">
            </TextView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/btn_home_health"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:padding="0sp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_home_health"
                android:alpha="0.3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:text="@string/btn_home_health"
                android:fontFamily="@font/cafe24surround"
                android:textSize="50dp">
            </TextView>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="0dp"
        android:paddingVertical="10dp">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/btn_home_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:padding="0sp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_home_book"
                android:alpha="0.3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:text="@string/btn_home_book"
                android:fontFamily="@font/cafe24surround"
                android:textSize="50dp">
            </TextView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/btn_home_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:padding="0sp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_home_money"
                android:alpha="0.3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:text="@string/btn_home_money"
                android:fontFamily="@font/cafe24surround"
                android:textSize="50dp">
            </TextView>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="0dp"
        android:paddingVertical="10dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/btn_home_hobby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:padding="0sp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_home_hobby"
                android:alpha="0.3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:text="@string/btn_home_hobby"
                android:fontFamily="@font/cafe24surround"
                android:textSize="50dp">
            </TextView>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/btn_home_study"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:padding="0sp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_home_study"
                android:alpha="0.3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:text="@string/btn_home_study"
                android:fontFamily="@font/cafe24surround"
                android:textSize="50dp">
            </TextView>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>